--- a/cdk/app/package.json
+++ b/cdk/app/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.132.0",
+    "@aws-cdk/aws-secretsmanager": "^1.132.0",
     "@aws-cdk/core": "1.130.0",
     "source-map-support": "^0.5.16"
   }
