--- a/cdk/app/package.json
+++ b/cdk/app/package.json
@@ -21,9 +21,12 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk-containers/ecs-service-extensions": "^1.132.0",
     "@aws-cdk/aws-ec2": "^1.132.0",
+    "@aws-cdk/aws-ecs": "^1.132.0",
     "@aws-cdk/aws-secretsmanager": "^1.132.0",
     "@aws-cdk/core": "1.130.0",
+    "@aws-quickstart/ecs-consul-mesh-extension": "^0.2.13",
     "source-map-support": "^0.5.16"
   }
 }
