--- a/cdk/app/package.json
+++ b/cdk/app/package.json
@@ -21,12 +21,14 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk-containers/ecs-service-extensions": "^1.132.0",
-    "@aws-cdk/aws-ec2": "^1.132.0",
-    "@aws-cdk/aws-ecs": "^1.132.0",
-    "@aws-cdk/aws-secretsmanager": "^1.132.0",
-    "@aws-cdk/core": "1.132.0",
-    "@aws-quickstart/ecs-consul-mesh-extension": "^0.2.14",
+    "@aws-cdk-containers/ecs-service-extensions": "^1.139.0",
+    "@aws-cdk/aws-ec2": "^1.139.0",
+    "@aws-cdk/aws-ecs": "^1.139.0",
+    "@aws-cdk/aws-iam": "^1.139.0",
+    "@aws-cdk/aws-secretsmanager": "^1.139.0",
+    "@aws-cdk/core": "^1.139.0",
+    "@aws-quickstart/ecs-consul-mesh-extension": "^1.0.3",
+    "cdk": "^2.7.0",
     "source-map-support": "^0.5.16"
   }
 }
